<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WishingApp1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome_to_wishing_app">WELCOME TO WISHING APP</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome_to_whing_app">WELCOME to whing app</string>
    <string name="menu">Menu</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="wishing_app_is_a_one_stop_solution_for_all_wisher_and_greeter_">Wishing App is a one stop solution for all Wisher and Greeter.</string>
    <string name="our_life_is_very_busy_in_others_schedule_and_you_could_apos_nt_wish_all_wishes_to_your_friends_and_family_and_felt_you_careless_about_that_">"Our life is very busy in others schedule and you could&amp;apos;nt wish all wishes to your friends and family and felt you careless about that. "</string>
    <string name="our_life_is_very_busy_in_others_schedule_and_you_couldnt_wish_all_wishes_to_your_friends_and_family_and_felt_you_careless_about_that">our life is very busy in others schedule and you couldnt wish all wishes to your friends and family and felt you careless about that</string>
    <string name="lets_start_with_adding_events_">Lets Start With Adding Events!!!!!  :- )</string>
    <string name="showevent">ShowEvent</string>
    <string name="addevent">AddEvent</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="medium_text">Medium Text</string>
    <string name="mobile_no_">Mobile No :</string>
    <string name="message">Message</string>
    <string name="enter_details">Enter Details</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="message_">Message:</string>
    <string name="dob_">DOB:</string>
    <string name="date_is_">Date is :</string>
    <string name="date_">Date :</string>
    <string name="the_date_is_">The date is_</string>
    <string name="set_date">Set Date</string>
    <string name="date_selected">Date_selected</string>
    <string name="selected_date_">Selected_date_</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="mobileno">MobileNo</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="textview">TextView</string>
    <string name="title_activity_menu_demo">MenuDemoActivity</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_display1">Display1Activity</string>

</resources>